finished challenge assignment

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -1,5 +1,5 @@
 ---
-title: 11ty Boilerplate
+title: Layout Reproduction
 ---
 
 <!DOCTYPE html>
@@ -13,8 +13,22 @@ title: 11ty Boilerplate
 <body>
   <nav>
     <ul>
-      <li><a href="/" title="Go home">Home</a></li>
-      <li><a href="/about/" title="About the boilerplate">About</a></li>
+      <li><img class="logo" src="/images/logo.png"></li>
+      <li class="title text"><b>Hacker News</b></li>
+      <li class="text">new</li>
+      <li class="text">|</li>
+      <li class="text">past</li>
+      <li class="text">|</li>
+      <li class="text">comments</li>
+      <li class="text">|</li>
+      <li class="text">ask</li>
+      <li class="text">|</li>
+      <li class="text">show</li>
+      <li class="text">|</li>
+      <li class="text">jobs</li>
+      <li class="text">|</li>
+      <li class="text">submit</li>
+      <li class="text login">login</li>
     </ul>
   </nav>
     {{ content }}
