--- a/index.liquid
+++ b/index.liquid
@@ -1,7 +1,108 @@
 ---
 layout: layout.liquid
-title: 11ty Boilerplate
+title: Layout Reproduction
 ---
 
-<h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
-<img alt="pine" src="/images/pine.png" width="50" />
+<div class="content">
+    <ol>
+        <article>
+        <li>Airfoil <em>(ciechanow.ski)</em>
+        <p class="stats">1148 points by todsacerdoti 4 hours ago | hide | 115 comments</p></li>
+        </article>
+
+        <article>
+        <li>Amazon lobbysist to be banned from European parliament <em>(uni-europa.org)</em>
+        <p class="stats">42 points by anigbrowl 16 minutes ago | hide | 8 comments</p></li>
+        </article>
+
+        <article>
+        <li>SuperTux <em>(github.com/supertux)</em>
+        <p class="stats">61 points by floriangosse 1 hour ago | hide | 13 comments</p></li>
+        </article>
+
+        <article>
+        <li>Pure Programming Language <em>(agraef.github.io)</em>
+        <p class="stats">56 points by tosh 2 hours ago | hide | 4 comments</p></li>
+        </article>
+
+        <article>
+        <li>Testing the F-35C Tailhook <em>(the-engi-nerd.github.io)</em>
+        <p class="stats">239 points by sklargh 5 hours ago | hide | 101 comments</p></li>
+        </article>
+
+        <article>
+        <li>Ant Geopolitics <em>(aeon.co)</em>
+        <p class="stats">196 points by romaintailhurat 7 hours ago | hide | 61 comments</p></li>
+        </article>
+
+        <article>
+        <li>Tesorio (YC S15) Is Hiring a Head of Infrastructure (100% Remote) <em>(tesorio.com)</em>
+        <p class="stats">21 minutes ago | hide</p></li>
+        </article>
+
+        <article>
+        <li>The /unblock API from Browserless: dodging bot detection as a service <em>(browserless.io)</em>
+        <p class="stats">75 points by keepamovin 3 hours ago | hide | 65 comments</p></li>
+        </article>
+
+        <article>
+        <li>I turned my open-source project into a full-time business <em>(emailengine.app)</em>
+        <p class="stats">472 points by andris9 11 hours ago | hide | 185 comments</p></li>
+        </article>
+
+        <article>
+        <li>SpaceX discloses cause of Starship anomalies as it clears an FAA hurdle <em>(arstechnica.com)</em>
+        <p class="stats">164 points by rbanffy 8 hours ago | hide | 188 comments</p></li>
+        </article>
+
+        <article>
+        <li>Blazer: Business intelligence made simple <em>(github.com/ankane)</em>
+        <p class="stats">124 points by tosh 7 hours ago | hide | 27 comments</p></li>
+        </article>
+
+        <article>
+        <li>Apple cancels work on electric car, shifts team to generative AI <em>(bloomberg.com)</em>
+        <p class="stats">405 points by coloneltcb 2 hours ago | hide | 416 comments</p></li>
+        </article>
+
+        <article>
+        <li>Synthetic daa generation for tabular data <em>(github.com/sdv-dev)</em>
+        <p class="stats">20 points by skadamat 2 hours ago | hide | 1 comment</p></li>
+        </article>
+
+        <article>
+        <li>Show HN: Mountaineer - Webapps in Python and React <em>(github.com/piercefreeman)</em>
+        <p class="stats">82 points by icyfox 6 hours ago | hide | 33 comments</p></li>
+        </article>
+
+        <article>
+        <li>Show HN: I built an open-source data copy tool called ingestr <em>(github.com/bruin-data)</em>
+        <p class="stats">78 points by karakanb 6 hours ago | hide | 27 comments</p></li>
+        </article>
+
+        <article>
+        <li>Dracula's Biggest Mistake <em>(ayjay.org)</em>
+        <p class="stats">20 points by chesterfield 2 hours ago | hide | 24 comments</p></li>
+        </article>
+
+        <article>
+        <li>Consider the Pawpaw <em>(beltmag.com)</em>
+        <p class="stats">55 points by PaulHoule 7 hours ago | hide | 48 comments</p></li>
+        </article>
+
+        <article>
+        <li>Why time seems to pass faster as we age <em>(invertedpassion.com)</em>
+        <p class="stats">215 points by paraschopra 11 hours ago | hide | 138 comments</p></li>
+        </article>
+
+        <article>
+        <li>The Second Golden Age of Emacs <em>(batsov.com)</em>
+        <p class="stats">78 points by ossusermivami 9 hours ago | hide | 39 comments</p></li>
+        </article>
+
+        <article>
+        <li>Social Media First Amendment Cases <em>(lawfaremedia.org)</em>
+        <p class="stats">55 points by Mjadams 7 hours ago | hide | 140 comments</p></li>
+        </article>
+    </ol>
+</div>
